# legal-rag-assistant

./: Dockerfile  LICENSE  README.md  app.py  main_chat.py  packages.txt  pyproject.toml  pyproject.toml.backup  rag_index_builder.py  requirements.txt  tools.py
rag_faiss_store/: index.faiss  index.pkl
